--- a/components/Hosting/Hosting.module.css
+++ b/components/Hosting/Hosting.module.css
@@ -1,15 +1,15 @@
 
-.solutionContainer {
+.hostingContainer {
     padding: 100px 0;
-    margin-top: 70px;
+    margin-top: 0;
 }
-.solutionTitle {
+.hostingTitle {
     line-height: 1.21;
     text-align: center;
     font-size: 2.441em;
     font-family: "Roboto", sans-serif;
 }
-.solutionSubtitle {
+.hostingSubtitle {
     font-family: "Roboto", sans-serif;
     line-height: 1.21;
     text-align: center;
